# perspicio

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
sboms/: Python-3.12.2.tgz.spdx.json
